; ModuleID = '/home/carl/AnghaBench/systemd/src/network/netdev/extr_bridge.c_netdev_bridge_set_handler.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/netdev/extr_bridge.c_netdev_bridge_set_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"Bridge parameters could not be set: %m\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"Bridge parameters set success\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @netdev_bridge_set_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netdev_bridge_set_handler(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = call i32 @assert(i32* %9)
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @assert(i32* %11)
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @sd_netlink_message_get_errno(i32* %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @log_netdev_warning_errno(i32* %18, i32 %19, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %24

21:                                               ; preds = %3
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @log_netdev_debug(i32* %22, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %17
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_netlink_message_get_errno(i32*) #1

declare dso_local i32 @log_netdev_warning_errno(i32*, i32, i8*) #1

declare dso_local i32 @log_netdev_debug(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
